--- a/project/templates/showttip.html
+++ b/project/templates/showttip.html
@@ -38,7 +38,7 @@
   </tr>
   <tr style="width:200px;">
     <td class="col text-left w-50 align-text-top">Type</td>
-    <td class="col text-left w-50">{{ event[1].param_name }}</td>
+    <td class="col text-left w-50 text-info font-weight-bold">{{ event[1].param_name }}</td>
   </tr>
 {% endif %}
 
