--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -187,11 +187,11 @@
     });
     </script>
 
-    {% with messages = get_flashed_messages(category_filter=['success']) %}
+    {% with messages = get_flashed_messages(with_categories=True, category_filter=['success', 'info', 'danger']) %}
       <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
       {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-success alert-dismissible" role="alert">
+        {% for category, message in messages %}
+          <div class="alert alert-{{category}} alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <!-- <strong>Title</strong> --> {{ message }}
           </div>
