--- a/project/templates/calendar.html
+++ b/project/templates/calendar.html
@@ -66,7 +66,7 @@
   </div>
 </div>
 
-<!-- Modal used to hold the modeal dialogs for the bookings -->
+<!-- Modal used to hold the modal dialogs for the bookings -->
 <div class="modal fade bd-example-modal-lg" id="newBookingModal" role="dialog" data-focus="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content" id="model-content-opt">
@@ -75,48 +75,6 @@
     </div>
 </div>
 
-<div class="modal fade" id="lockedBookingModal" role="dialog">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-        <h5 class="lmodal-title font-weight-bold text-dark text-center" id="lockedModalLabel">Locked</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div id="modal-body p-2 m-5">
-            <h5 class="p-1 mx-1 font-weight-bold text-secondary text-center">Error: This date is currently locked.</h5>
-        </div>
-      </div>
-    </div>
-</div>
 
-<div class="modal fade" id="checkBookingModal" role="dialog">
-    <div class="modal-dialog modal-dialog-centered">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-        <h5 class="modal-title" id="checkModalLabel">Event Details: <span id="bookingTitle" name="startDate" class="badge p-1"></span></h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body bg-light">
-          <table>
-          <tr><td class="p-1 mx-1 font-weight-bold">Owner</td><td><div id="bookingOwner"></div></td>
-          <tr><td class="p-1 mx-1 font-weight-bold">Type</td><td><div id="bookingType"></div></td>
-          <tr><td class="p-1 mx-1 font-weight-bold">Info</td><td><div id="bookingInfo"></div></td>
-          <tr><td class="p-1 mx-1 font-weight-bold">Start</td><td><div id="bookingStart"></div></td>
-          <tr><td class="p-1 mx-1 font-weight-bold">End</td><td><div id="bookingEnd"></div></td>
-          </table>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-
-    </div>
-</div>
 
 {% endblock %}
