--- a/project/templates/editdate.html
+++ b/project/templates/editdate.html
@@ -131,8 +131,8 @@
           </tr>
 
           <tr>
-            <td class="w-25 text-right mx-2 p-1 align-text-top">{{ form.doi_hap.label }}</td>
-            <td class="w-75 text-left mx-2 p-1">{{ field_with_help(form.doi_hap(rows=3, class_="form-control"), form.doi_hap.render_kw["title"]) }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-top">{{ form.doi_environment.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ field_with_help(form.doi_environment(class_="form-control"), form.doi_environment.render_kw["title"]) }}</td>
           </tr>
 
           <tr>
