--- a/project/templates/dates.html
+++ b/project/templates/dates.html
@@ -27,7 +27,7 @@
         <th scope="col">Regions</th>
         <th scope="col">Start</th>
         <th scope="col">End</th>
-        <th scope="col">Priority</th>
+        <th scope="col">Env</th>
         <th scope="col">Type</th>
       </tr>
     </thead>
@@ -40,7 +40,7 @@
         <td>{{ rec["doi_regions"] }}</td>
         <td>{{ rec["doi_start_dt"] }}</td>
         <td>{{ rec["doi_end_dt"] }}</td>
-        <td>{{ rec["priority"] }}</td>
+        <td>{{ rec["env"] }}</td>
         <td>{{ rec["type"] }}</td>
       </tr>
       {% endfor %}
