--- a/project/templates/editdate.html
+++ b/project/templates/editdate.html
@@ -122,6 +122,11 @@
           </tr>
 
           <tr>
+            <td class="w-25 text-right mx-2 p-1 align-text-top">{{ form.doi_environment.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ field_with_help(form.doi_environment(class_="form-control"), form.doi_environment.render_kw["title"]) }}</td>
+          </tr>
+          
+          <tr>
             <td class="w-25 text-right mx-2 p-1 align-text-top">{{ form.doi_type.label }}</td>
             <td class="w-75 text-left mx-2 p-1">{{ field_with_help(form.doi_type(class_="form-control"), form.doi_type.render_kw["title"]) }}</td>
           </tr>
@@ -131,8 +136,8 @@
           </tr>
 
           <tr>
-            <td class="w-25 text-right mx-2 p-1 align-text-top">{{ form.doi_environment.label }}</td>
-            <td class="w-75 text-left mx-2 p-1">{{ field_with_help(form.doi_environment(class_="form-control"), form.doi_environment.render_kw["title"]) }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-top">{{ form.doi_change_ref.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ field_with_help(form.doi_change_ref(class_="form-control"), form.doi_change_ref.render_kw["title"]) }}</td>
           </tr>
 
           <tr>
@@ -153,9 +158,11 @@
           $('select#doi_type').change(function() {
             if ($( "select#doi_type" ).val()=='131') {
               $("select#doi_filter").prop( "disabled", false ).change();
+              $("#doi_change_ref").prop( "disabled", false ).change();
             } else {
               $("select#doi_filter").prop( "disabled", true );
               $("select#doi_filter").val(0).change();
+              $("#doi_change_ref").prop( "disabled", true ).change();
             }
           }).change();
       });
