--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -65,8 +65,8 @@
             <a class="nav-link" href="{{ url_for('gui_blueprint._index') }}">Dashboard</a>
           </li>
 
-          <li class="nav-item font-weight-bold">
-            <a class="nav-link" href="{{ url_for('gui_blueprint._bookings') }}">Bookings</a>
+          <li class="nav-item dropdown font-weight-bold">
+            <a class="nav-link" href="{{ url_for('gui_blueprint._bookings', env=0) }}">Bookings</a>
           </li>
 
           {% if is_admin() %}
